--- a/reports/_quarto.yml
+++ b/reports/_quarto.yml
@@ -1,7 +1,7 @@
 
 author:
-    - name: Skippy McBoatface
-      email: skippy@mcboatface.com
+    - name: Annika Govil
+      email: govila@vcu.edu
 
 date: last-modified
 
